# ir-diff

./: .gitignore  CMakeLists.txt  README.md
include/IRDiff/: Diff.h  HtmlRender.h  HtmlStyle.h  IRTypes.h  ParseIR.h  Util.h
sample/: diff.html  new.mlir  old.mlir
src/: Diff.cpp  HtmlRender.cpp  ParseIR.cpp  main.cpp
